<resources>
    <string name="app_name">HomeWork2</string>
    <string name="Title">Лол</string>
    <string name="SignUp">Регистрация</string>
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="Password">Пароль</string>
    <string name="confirmPassword">Подтверждение пароля</string>
    <string name="simpleEmail">simpleEmail@pochta.kek</string>
    <string name="titleSignIn">Кек</string>
    <string name="signUpNew">Нет аккаунта? Зарегайся!</string>
    <string name="enter">Войти</string>
    <string name="alreadyRegistered">Уже есть аккаунт? Войти</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Должны быть заполнены все поля!</string>
    <string name="mainMenuTitleFromSignIn">Привет, рады снова тебя видеть!</string>
    <string name="mainMenuTitleFromSignUp">Успешная регистрация</string>
    <string name="some_message">Some message</string>
    <string name="user_data">User Data</string>
    <string name="typeHere">Напиши сюда…</string>
    <string name="userData">Имя фамилия</string>
    <string name="justText">Просто надпись</string>
    <string name="exampleText">Some text</string>
</resources>